# inno_can_sender

./: Carmsg-v5.dbc  Carmsg-v5.dbf  README.md
can_ws/: ACC.desktop
can_ws/Shortcut_backup/: ACC.desktop  AEB.desktop  ChangeLane.desktop  Crossroad.desktop  EvasiveA.desktop
can_ws/src/inno_can_send/: CMakeLists.txt  package.xml
can_ws/src/inno_can_send/src/: inno_can_send.cpp
can_ws/src/inno_sdk/: CMakeLists.txt  package.xml
can_ws/src/inno_sdk/include/: lib_emuc_2.h
